# bytes-human-py

./: .gitignore  LICENSE  README.md  pyproject.toml
bytes_human/: __init__.py  cli.py  converter.py
tests/: test_cli.py  test_converter.py
