[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bytes-human"
version = "1.0.0"
description = "Convert between byte sizes and human-readable formats with locale-aware formatting"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
keywords = ["bytes", "human-readable", "file-size", "converter", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
bytes-human = "bytes_human.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/bytes-human"
Repository = "https://github.com/yourusername/bytes-human"
Issues = "https://github.com/yourusername/bytes-human/issues"

[tool.setuptools.packages.find]
include = ["bytes_human*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
